Fixed overflowing content on cards

--- a/caeq-web-portal/src/components/cards/GatheringCard.scss
+++ b/caeq-web-portal/src/components/cards/GatheringCard.scss
@@ -3,15 +3,19 @@
     flex-direction: column;
     align-items: center;
     justify-content: space-around;
-    height: 550px;
+    min-height: 550px;
+    height: fit-content;
     width: 300px;
     border-radius: 15px;
     box-shadow: 0 2px 2px 1px rgba(0, 0, 0, 0.2);
     padding: 1rem;
 
     .gathering-card--title {
+        width: 290px;
         font-size: 20px;
         font-weight: 800;
+        overflow-wrap: break-word;
+        word-wrap: break-word;
     }
 
     .image-more-info {
@@ -22,8 +26,14 @@
         display: flex;
         flex-direction: row;
         align-items: center;
+        justify-content: center;
+        overflow-wrap: break-word;
+        word-wrap: break-word;
+        width: 200px;
+        max-width: 100%;
 
         p {
+            max-width: 100%;
             display: block;
             margin-left: 5px;
         }
